deployment/stacks/application/base/template/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: K8S_SERVICE_ACCOUNT_NAME_TO_REPLACE
      serviceAccount: K8S_SERVICE_ACCOUNT_NAME_TO_REPLACE
      containers:
        - name: ui
          image: DOCKER_REGISTRY_TO_REPLACE/ui:VERSION_TO_REPLACE
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "0Mi"
              cpu: "0m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          imagePullPolicy: Always
