deployment/stacks/application/base/template/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  labels:
    objectType: service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8081
  selector:
    app: ui
